# libatlas

./: CMakeLists.txt  atlas.c  atlas.h  image.c  main.c
stb/: stb_rect_pack.c  stb_rect_pack.h
